<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/noteListFragment">

    <fragment
        android:id="@+id/noteListFragment"
        android:name="com.midterm.noteapp.view.NoteListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_note_list" >
        <action
            android:id="@+id/action_noteListFragment_to_noteDetailFragment"
            app:destination="@id/noteDetailFragment" />
        <action
            android:id="@+id/action_noteListFragment_to_addEditNoteFragment"
            app:destination="@id/addEditNoteFragment" />
        <action
            android:id="@+id/action_noteListFragment_to_recycleBinFragment"
            app:destination="@id/recycleBinFragment" />
    </fragment>
    <fragment
        android:id="@+id/noteDetailFragment"
        android:name="com.midterm.noteapp.view.NoteDetailFragment"
        android:label="@string/note_detail"
        tools:layout="@layout/fragment_note_detail" >
        <action
            android:id="@+id/action_noteDetailFragment_to_addEditNoteFragment"
            app:destination="@id/addEditNoteFragment" />
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/addEditNoteFragment"
        android:name="com.midterm.noteapp.view.AddEditNoteFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_add_edit_note" >
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="item_id"
            android:defaultValue="-1"
            app:argType="integer" />
        <action
            android:id="@+id/action_addEditNoteFragment_to_noteListFragment"
            app:destination="@id/noteListFragment"
            app:popUpTo="@id/noteListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/recycleBinFragment"
        android:name="com.midterm.noteapp.view.RecycleBinFragment"
        android:label="@string/recycle_bin"
        tools:layout="@layout/fragment_recycle_bin" />
</navigation>